# ONSdigital.eq-questionnaire-runner

./: .development.env  .editorconfig  .eslintrc  .schemas-version  Dockerfile  Pipfile  application.py  gunicorn_config.py  pyproject.toml  uwsgi.ini
.github/workflows/: build.yml  master.yml
app/: setup.py
app/data_model/: progress_store.py
app/helpers/: address_lookup_api_helper.py  form_helper.py
app/questionnaire/: location.py  path_finder.py  placeholder_transforms.py  questionnaire_schema.py  rules.py
app/routes/: health_check.py  questionnaire.py  session.py
app/views/contexts/: list_collector.py
app/views/handlers/: block.py  block_factory.py  list_action.py  list_collector.py  list_edit_question.py  list_remove_question.py  primary_person_question.py  question.py
ci/: backup_questionnaire_state.yaml
k8s/: deploy_app.sh
k8s/helm/: values.yaml
k8s/helm/templates/: deployment.yaml
schemas/test/en/: test_address.json
scripts/: run_lint.sh  run_tests.sh  run_validator.sh
templates/: census-thank-you.html
templates/partials/: list-content.html
tests/app/parser/: test_supplementary_data_parser.py
tests/functional/: generate_pages.py
tests/integration/routes/: test_status.py
