[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
colorama = "^0.4.3"
flask = "^1.1.1"
flask-babel = "^0.12.2"
flask-caching = "^1.8.0"
flask-login = "^0.4.1"
flask-themes2 = "^0.1.4"
flask-wtf = "^0.14.2"
google-cloud-datastore = "^1.10.0"
grpcio = "^1.26.0"
gunicorn = "^20.0.4"
newrelic = "^5.4.1"
pika = "^1.1.0"
pyyaml = "^5.3"
requests = "^2.22.0"
sdc-cryptography = "^0.4.0"
structlog = "^19.2.0"
ua-parser = "^0.8.0"
blinker = "^1.4"
boto3 = "^1.11.9"
humanize = "^0.5.1"
flask-talisman = "^0.7.0"
marshmallow = "^3.3.0"
python-snappy = "^0.5.4"
google-cloud-storage = "^1.25.0"
jsonpointer = "^2.0"
redis = "^3.3.11"
flask-compress = "^1.4.0"
htmlmin = "^0.1.12"
coloredlogs = "^10.0"
gevent = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pep8 = "^1.7.1"
mock = "^3.0.5"
pytest-cov = "^2.8.1"
jsonschema = "^3.2.0"
pylint = "^2.4.4"
flask-debugtoolbar = "^0.10.1"
pylint-mccabe = "^0.1.3"
pylint-quotes = "^0.2.1"
beautifulsoup4 = "^4.8.2"
httmock = "^1.3.0"
flake8 = "^3.7.9"
flake8-blind-except = "^0.1.1"
flake8-debugger = "^3.2.1"
flake8-mock = "^0.3"
flake8-print = "^3.1.4"
flake8-tuple = "^0.4.1"
moto = "^1.3.14"
freezegun = "^0.3.14"
pytest-xdist = "^1.31.0"
pytest-sugar = "^0.9.2"
fakeredis = "^1.1.0"
mypy = "^0.761"
black = "^19.10b0"
pytest-flask = "^0.15.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
